--- a/doc/Dockerfile
+++ b/doc/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:21-jdk-slim
 
 WORKDIR /app
 
-COPY target/HSBC-hometask-transaction-0.0.1-SNAPSHOT.jar /app/HSBC-hometask-transaction-0.0.1-SNAPSHOT.jar
+COPY ../target/HSBC-hometask-transaction-0.0.1-SNAPSHOT.jar /app/HSBC-hometask-transaction-0.0.1-SNAPSHOT.jar
 
 EXPOSE 8080
 
